--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ anyhow = "1"
 walkdir = "2.5.0"
 rayon = "1.11.0"
 clap = { version = "4", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
